# tee

./: CHANGELOG.md  dune-project  tee.opam
examples/: custom_type.ml  dune  testing_function.ml
lib/: dune  tee.ml  teetypes.ml
test/: dune  tee_test.ml
